--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <!-- 声明当前父项目包含哪些子项目模块，module就是模块的意思 -->
     <modules>
         <module>csmall-stock</module>
+        <module>csmall-commons</module>
     </modules>
     <!--properties标签-->
     <properties>
