--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>csmall-commons</module>
         <module>csmall-business</module>
         <module>csmall-cart</module>
+        <module>csmall-order</module>
     </modules>
     <!--properties标签-->
     <properties>
