--- a/csmall-stock/pom.xml
+++ b/csmall-stock/pom.xml
@@ -14,6 +14,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>csmall-stock</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>pom</packaging>
+    <modules>
+        <module>csmall-stock-service</module>
+    </modules>
 
     <dependencies>
         <!--web实例-->
