--- a/csmall-business/src/main/resources/application-dev.yml
+++ b/csmall-business/src/main/resources/application-dev.yml
@@ -7,3 +7,11 @@ spring:
       discovery:
         #配置Nacos的位置 用于提交当前的信息
         server-addr: localhost:8848
+dubbo:
+  protocol:
+    port: -1
+    name: dubbo
+  registry:
+    address: nacos://localhost:8848
+  consumer:
+    check: false
