--- a/csmall-order/csmall-order-webapi/pom.xml
+++ b/csmall-order/csmall-order-webapi/pom.xml
@@ -91,6 +91,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <!--  Sentinel的依赖  -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
     </dependencies>
 
 
