--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <module>csmall-business</module>
         <module>csmall-cart</module>
         <module>csmall-order</module>
+        <module>gateway</module>
+        <module>search</module>
     </modules>
     <!--properties标签-->
     <properties>
